app/globals.css
@import "tailwindcss";


@theme
{
  --font-display: var(--font-display);
  --font-sans: var(--font-sans);

  --color-primary: #306CE4;

  --color-light-fg: #FFFFFF;
  --color-dark-fg: #000000;

  --color-dark-muted-fg: #707070;
  --color-light-muted-fg: #AAAAAA;

  --color-light-bg: #F0F0F0;
  --color-dark-bg: #0F0F0F;
  --color-dark-elevated-bg: #222222;

  --color-selection-text: rgba(85, 109, 166, 0.45);

  --color-error: #AD3937;

  --spacing-header: 60px;
  --spacing-header-xl: 80px;
}


@layer base
{
  html {
    @apply scroll-smooth h-full;
  }

  body {
    @apply font-display text-base text-light-fg antialiased h-full grid grid-rows-[1fr_auto];
  }

  main {
    @apply mt-header xl:mt-header-xl;
  }

  ::selection {
    @apply bg-selection-text;
  }

  ::-webkit-scrollbar-track {
    @apply bg-dark-elevated-bg;
  }

  ::-webkit-scrollbar {
    @apply w-1.5 h-1.5;
  }

  ::-webkit-scrollbar-thumb {
    @apply rounded-full bg-dark-muted-fg;
  }

  ::-webkit-scrollbar-thumb:active {
    @apply bg-light-muted-fg;
  }

  header, footer, main > * {
    @apply px-[5%];
  }

  section, article {
    @apply py-16 md:py-26 lg:py-30 scroll-mt-[var(--spacing-header)] xl:scroll-mt-[var(--spacing-header-xl)];
  }

  article h3 {
    @apply font-medium mt-10 md:mt-12;
  }

  h2 + div {
    @apply mt-11 md:mt-18 lg:mt-22;
  }

  button {
    @apply cursor-pointer;
  }

  button:disabled {
    @apply cursor-default;
  }

  input,
  textarea {
    @apply bg-light-fg text-dark-fg outline-none rounded-lg p-3 font-sans;
  }

  ::placeholder {
    @apply font-light text-dark-muted-fg;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  blockquote {
    @apply leading-tight;
  }

  h1 {
    @apply text-[40px] sm:text-5xl md:text-[56px];
  }

  h2 {
    @apply text-4xl md:text-5xl;
  }
  
  h3 {
    @apply text-3xl md:text-4xl;
  }

  blockquote,
  h4 {
    @apply text-2xl md:text-3xl;
  }

  h5 {
    @apply text-xl md:text-2xl;
  }

  h3 + p,
  h2 + p {
    @apply mt-5 md:mt-6;
  }

  h4 + p {
    @apply mt-4 md:mt-5;
  }

  li {
    @apply relative ml-10;
  }

  li strong {
    @apply font-semibold;
  }

  li::before {
    @apply absolute content-[''] w-3 h-3 -left-7 top-1.5 md:top-2 bg-transparent border-primary border-2 rounded-full;
  }

  p,
  ul {
    @apply font-sans md:text-lg;
  }

  p + p,
  li + li:not(article li),
  article * + ul,
  article ul + * {
    @apply mt-3 md:mt-4;
  }

  h1 + a,
  h2 + a,
  h2 + button,
  p + div,
  p + a,
  p + form,
  p + button {
    @apply mt-8 md:mt-10;
  }

  h1 + p,
  svg + h4,
  .caption-subdued {
    @apply mt-7 md:mt-9;
  }

  main > * > div:first-child,
  footer > div:first-child {
    @apply max-w-[1408px] mx-auto;
  }

  time,
  .caption-subdued {
    @apply font-display text-light-muted-fg text-sm md:text-base;
  }

  p a {
    @apply underline underline-offset-3;
  }

  label {
    @apply font-medium;
  }

  footer svg {
    @apply w-6.5;
  }
}


@layer components
{
  .social-link {
    @apply flex justify-center items-center w-10.5 h-10.5;
  }

  .hero {
    @apply -mt-[var(--spacing-header)] xl:-mt-[var(--spacing-header-xl)] min-h-svh bg-dark-bg flex flex-col items-center justify-center;
  }

  .illustrations {
    @apply rounded-md brightness-95;
  }

  .base-link {
    @apply font-semibold flex gap-4 items-center;
  }

  .base-arrow {
    @apply duration-200 h-3 w-2;
  }

  .base-button {
    @apply rounded-lg py-3 md:py-3.5 px-5 font-semibold;
  }

  .button-compact {
    @apply px-4 xl:px-6 h-8.5 xl:h-11;
  }

  .contact h5 {
    @apply pb-5;
  }

  .contact {
    @apply p-7 sm:p-9 bg-dark-bg text-light-fg rounded-md;
  }

  .contact input,
  .contact textarea {
    @apply w-full mt-2;
  }

  .contact input,
  .contact button {
    @apply h-10.5 p-3;
  }

  .contact button {
    @apply rounded-lg font-medium w-full flex items-center justify-center duration-100; 
  }

  #terms h2,
  #terms h4 {
    @apply font-medium;
  }

  #terms p + h4 {
    @apply mt-8 md:mt-10;
  }

  .card-skeleton {
    @apply items-center gap-y-2 flex-1 animate-pulse;
  }

  .card-list {
    @apply grid grid-cols-[minmax(0,1fr)_auto] gap-x-3 sm:gap-x-4 py-3 sm:py-4 select-none items-center;
  }

  .card-skeleton-title {
    @apply rounded-lg w-full max-w-32 h-4 md:h-4.5 bg-light-fg;
  }

  .card-skeleton-time {
    @apply bg-light-muted-fg rounded-lg w-9 h-3.5 ml-auto;
  }

  .card-skeleton-content {
    @apply bg-light-muted-fg rounded-lg w-full max-w-225 h-4 col-span-full mt-1;
  }

  .card-list time {
    @apply ml-auto;
  }

  .card-container {
    @apply text-base line-clamp-2 sm:line-clamp-1 col-span-full text-light-muted-fg;
  }

  .card-title {
    @apply font-medium line-clamp-1 break-all;
  }

  .stat-card {
    @apply flex flex-col max-md:items-center md:px-12 lg:px-16;
  }
}


@layer utilities
{
  .inset-border {
    box-shadow: inset 0 0 0 1.5px;
  }
}

